--- a/client/package.json
+++ b/client/package.json
@@ -7,17 +7,23 @@
     "@iconscout/react-unicons": "^1.1.6",
     "@mantine/core": "^4.2.1",
     "@mantine/hooks": "^4.2.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.27.2",
+    "axios": "^1.8.4",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.13.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-input-emoji": "^4.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
@@ -25,7 +31,8 @@
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.5.1",
     "timeago.js": "^4.0.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webpack-dev-server": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
